Fixed some typos.

--- a/src/main/resources/static/product-details.html
+++ b/src/main/resources/static/product-details.html
@@ -20,7 +20,7 @@
 
 <main class="container">
     <h1>Page title</h1>
-    <div id="details-page-view" class="row">
+    <div id="product-details-view" class="row">
         <div class="col-md-8">
             <div class="product-image">
                 <img src="http://tafttest.com/300x300">
