--- a/src/main/resources/Static/checkOutCartPage.html
+++ b/src/main/resources/Static/checkOutCartPage.html
@@ -17,7 +17,7 @@
 <button onclick="location.href = 'productPage';" Class="goBackButton" class="float-left submit-button" >Go Back</button>
 <button onclick="location.href = 'receiptPage.html';" id="confirmOrderButton" class="float-left submit-button" >Confirm Order</button>
 
-<script src="cart.js"></script>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="cart.js"></script>
 </body>
 </html>
