Added some logic for query-based product details loading. This is getting dangerously hacky...

--- a/src/main/resources/static/product-details.html
+++ b/src/main/resources/static/product-details.html
@@ -12,7 +12,7 @@
 
 <nav class="navbar">
     <form id="search-form" class="form-inline">
-        <label for="search-bar">Search:</label>
+        <label for="search-bar">Search</label>
         <input id="search-bar" type="text" class="form-control">
         <button type="submit" class="btn">Submit</button>
     </form>
@@ -22,9 +22,7 @@
     <h1>Page title</h1>
     <div id="product-details-view" class="row">
         <div class="col-md-8">
-            <div class="product-image">
-                <img src="http://tafttest.com/300x300">
-            </div>
+            <div id="product-image"></div>
             <div id="product-description">
                 <h2>Product name</h2>
                 <p>Nothing to see here.</p>
