--- a/src/main/resources/static/registrate-customer.html
+++ b/src/main/resources/static/registrate-customer.html
@@ -1,58 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
 <head>
     <meta charset="UTF-8">
     <title>Admin Customer Page</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
           integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <script src="registrateCustomer.js"></script>
 </head>
 <body>
 <div class="container">
-<form>
+<form id="customer-form">
     <div class="form-group col-md">
     <div class="form-row col-md-6">
-            <label for="inputname4">Name</label>
-            <input type="text" class="form-control" id="inputname4">
+            <label for="inputname">Name</label>
+            <input type="text" class="form-control" id="inputname"> <!--#inputname för att hämta värdet-->
     </div>
     <div class="form-row col-md-6">
-            <label for="inputEmail4">Email</label>
-            <input type="email" class="form-control" id="inputEmail4">
+            <label for="inputEmail">Email</label>
+            <input type="email" class="form-control" id="inputEmail"> <!--#inputEmail för att hämta värdet-->
     </div>
     <div class="form-row col-md-6">
-            <label for="inputPassword4">Password</label>
-            <input type="password" class="form-control" id="inputPassword4">
+            <label for="inputPassword">Password</label>
+            <input type="password" class="form-control" id="inputPassword"> <!--#inputPassword för att hämta värdet-->
+    </div>
+    <div class="form-row col-md-6">
+            <input id="inputCheckbox" type="checkbox" class="form-check-input" >
+            <label class="form-check-label" for="inputCheckbox">Show password</label>
     </div>
     <br>
-    <div class="form-row col-md-6">
-        <input id="inputPassword5" type="checkbox" onclick="showPasswordFunction()">
-        Show Password
-    </div>
     <br>
     <div class="form-row col-md-6">
         <div class="form-group col-md-3"><button type="reset" class="btn btn-danger">Reset</button></div>
         <div class="form-group col-md"></div>
-        <div class="form-group col-md-3"><button type="submit" class="btn btn-success">Registrate</button></div>
+        <div class="form-group col-md-3"><button type="submit" class="btn btn-success">Registrate</button></div> <!--#registrate för att hämta värdet-->
     </div>
     </div>
 </form>
+    <div id="result-message">
+
+    </div>
 </div>
 
 
-<script>
-    function showPasswordFunction() {
-        var x = document.getElementById("inputPassword4");
-        if (x.type === "password") {
-            x.type = "text";
-        } else {
-            x.type = "password";
-        }
-    }
-</script>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
+
+
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
         crossorigin="anonymous"></script>
