--- a/src/main/resources/static/admin-show-customers.html
+++ b/src/main/resources/static/admin-show-customers.html
@@ -9,42 +9,39 @@
     <script src="coffeeShopAdmin.js"></script>
 </head>
 <body>
-
-<table class="table">
+<div class="container">
+    <h1>Customers Page</h1>
+<table id="customer-list" class="table">
     <thead class="thead-dark">
     <tr>
-        <th scope="col">#</th>
         <th scope="col">First Name</th>
         <th scope="col">Last Name</th>
         <th scope="col">E-Mail</th>
-        <th scope="col">Order</th>
     </tr>
     </thead>
     <tbody>
     <tr>
-        <th scope="row">1</th>
         <td>Mark</td>
         <td>Otto</td>
         <td>mark@mdo</td>
         <td> </td>
     </tr>
     <tr>
-        <th scope="row">2</th>
         <td>Jacob</td>
         <td>Thornton</td>
         <td>jacob@fat</td>
     </tr>
     <tr>
-        <th scope="row">3</th>
         <td>Larry</td>
         <td>the Bird</td>
         <td>larry@twitter</td>
     </tr>
     </tbody>
 </table>
+    </div> <!--Container-->
 
 
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
