--- a/src/main/resources/static/registrate-customer.html
+++ b/src/main/resources/static/registrate-customer.html
@@ -10,35 +10,67 @@
 </head>
 <body>
 <div class="container">
-<form id="customer-form">
-    <div class="form-group col-md">
-    <div class="form-row col-md-6">
-            <label for="inputname">Name</label>
-            <input type="text" class="form-control" id="inputname"> <!--#inputname för att hämta värdet-->
-    </div>
-    <div class="form-row col-md-6">
+    <form id="customer-form" class="needs-validation" novalidate>
+        <div class="form-row col-md-6">
+            <label for="inputname">First Name</label>
+            <input type="text" class="form-control" id="inputname" placeholder="..." required> <!--#inputname för att hämta värdet-->
+            <div class="valid-feedback">
+                Looks good!
+            </div>
+            <div class="invalid-feedback">
+                Please enter your first name.
+            </div>
+        </div>
+        <div class="form-row col-md-6">
+            <label for="inputname">Last Name</label>
+            <input type="text" class="form-control" id="inputlastname" placeholder="..." required> <!--#inputlastname för att hämta värdet-->
+            <div class="valid-feedback">
+                Looks good!
+            </div>
+            <div class="invalid-feedback">
+                Please enter your last name.
+            </div>
+        </div>
+        <div class="form-row col-md-6">
             <label for="inputEmail">Email</label>
-            <input type="email" class="form-control" id="inputEmail"> <!--#inputEmail för att hämta värdet-->
-    </div>
-    <div class="form-row col-md-6">
+            <input type="email" class="form-control" id="inputEmail" placeholder="..."  required> <!--#inputEmail för att hämta värdet-->
+            <div class="valid-feedback">
+                Looks good!
+            </div>
+            <div class="invalid-feedback">
+                Please choose an Email.
+            </div>
+        </div>
+        <div class="form-row col-md-6">
             <label for="inputPassword">Password</label>
-            <input type="password" class="form-control" id="inputPassword"> <!--#inputPassword för att hämta värdet-->
-    </div>
-    <div class="form-row col-md-6">
-            <input id="inputCheckbox" type="checkbox" class="form-check-input" >
-            <label class="form-check-label" for="inputCheckbox">Show password</label>
-    </div>
-    <br>
-    <br>
-    <div class="form-row col-md-6">
-        <div class="form-group col-md-3"><button type="reset" class="btn btn-danger">Reset</button></div>
-        <div class="form-group col-md"></div>
-        <div class="form-group col-md-3"><button type="submit" class="btn btn-success">Registrate</button></div> <!--#registrate för att hämta värdet-->
-    </div>
-    </div>
-</form>
-    <div id="result-message">
+            <input type="password" class="form-control" id="inputPassword" placeholder="..." required> <!--#inputPassword för att hämta värdet-->
+            <div class="valid-feedback">
+                Looks good!
+            </div>
+            <div class="invalid-feedback">
+                Please choose a Password.
+            </div>
+        </div>
+        <div class="form-row col-md-6">
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" id="inputCheckbox">
+                <label class="form-check-label" for="inputCheckbox">
+                    Show password
+                </label>
+            </div>
+        </div>
+        <br>
+        <div class="form-row col-md-6">
+            <div class="form-group col-md-1"><button type="reset" class="btn btn-danger" id="reset-button">Reset</button></div>
+            <div class="form-group col-md"></div>
+            <div class="form-group col-md-2"><button type="submit" class="btn btn-success" id="submit-button">Registrate</button></div> <!--#registrate för att hämta värdet-->
+            <div class="form-group col-md"></div>
+            <div class="form-group col-md-4"><button type="button" class="btn btn-primary" id="go-back-button">Go back</button></div>
+        </div>
+    </form>
+        <div id="result-message">
 
+        </div>
     </div>
 </div>
 
