fixar utskrift för order

--- a/src/main/resources/static/admin-show-orders-from-customer.html
+++ b/src/main/resources/static/admin-show-orders-from-customer.html
@@ -22,15 +22,12 @@
     </thead>
 </table>
     <div class="card">
-        <div class="card-header" id="headingOne">
-            <h2 class="mb-0">
-                <button class="btn btn-link btn-block text-left" type="button" data-toggle="collapse"
-                        data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                    Order #1
-                </button>
-            </h2>
-        </div>
-        <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#test">
+    <div class="card-header">
+        <h2 class="mb-0">
+
+        </h2>
+    </div>
+        <div class="collapse">
             <div class="card-body stuffy">
 
 
@@ -39,22 +36,22 @@
         </div>
     </div>
 
-    <div class="card">
-        <div class="card-header" id="headingTwo">
-            <h2 class="mb-0">
-                <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse"
-                        data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                    Order #2
-                </button>
-            </h2>
-        </div>
-        <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#test">
-            <div class="card-body stuffy">
+<!--    <div class="card">-->
+<!--        <div class="card-header" id="headingTwo">-->
+<!--            <h2 class="mb-0">-->
+<!--                <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse"-->
+<!--                        data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">-->
+<!--                    Order #2-->
+<!--                </button>-->
+<!--            </h2>-->
+<!--        </div>-->
+<!--        <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#test">-->
+<!--            <div class="card-body stuffy">-->
 
 
-            </div>
-        </div>
-    </div>
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
 
 
 
