saving before merge

--- a/src/main/resources/Static/checkOutCartPage.html
+++ b/src/main/resources/Static/checkOutCartPage.html
@@ -22,8 +22,8 @@
                     <th> </th>
                 </tr>
                 </thead>
-                <tbody id="productbox">
-                <tr id="afterProducts">
+                <tbody>
+                <tr id="afterProductsCartPage">
                     <td>  </td>
                     <td>  </td>
                     <td>  </td>
