New merge of FreWillAtVallJock

--- a/src/main/resources/static/html/registrate-customer.html
+++ b/src/main/resources/static/html/registrate-customer.html
@@ -6,7 +6,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
           integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <script src="registrateCustomer.js"></script>
+    <script src="../js/registrateCustomer.js"></script>
 </head>
 <body>
 <div class="container">
