filled out the DB...it is now thick

--- a/src/main/resources/Static/checkOutCartPage.html
+++ b/src/main/resources/Static/checkOutCartPage.html
@@ -6,7 +6,7 @@
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="../js/cart.js"></script>
+    <script src="cart.js"></script>
 </head>
 <body>
 <div class="container">
@@ -14,7 +14,6 @@
         <div class="col-sm-12 col-md-10 col-md-offset-1">
             <table class="table table-hover">
                 <thead>
-                <tr><h1>YOU ARE WELCOME! NOW GIVE US MORE MONEY</h1> </tr>
                 <tr>
                     <th>Product</th>
                     <th> </th>
@@ -24,7 +23,7 @@
                 </tr>
                 </thead>
                 <tbody>
-                <tr id="afterProductsReceiptPage">
+                <tr id="afterProductsCartPage">
                     <td>  </td>
                     <td>  </td>
                     <td>  </td>
@@ -50,13 +49,13 @@
                     <td>  </td>
                     <td>  </td>
                     <td>
-                        <button type="button" class="btn btn-success">
-                            <span class="glyphicon glyphicon-shopping-cart"></span> Make another purchase
+                        <button type="button" class="btn btn-default">
+                            <span class="glyphicon glyphicon-shopping-cart"></span> Continue Shopping
                         </button>
                     </td>
                     <td>
-                        <button type="button" class="btn btn-danger">
-                            Log out <span class="glyphicon glyphicon-log-out"></span>
+                        <button type="button" class="btn btn-success">
+                            Checkout <span class="glyphicon glyphicon-play"></span>
                         </button>
                     </td>
                 </tr>
@@ -65,5 +64,9 @@
         </div>
     </div>
 </div>
+<button onclick="location.href = 'productPage';" Class="goBackButton" class="float-left submit-button">Go Back</button>
+<button onclick="location.href = 'receiptPage.html';" id="confirmOrderButton" class="float-left submit-button">Confirm
+    Order
+</button>
 </body>
 </html>
