--- a/src/main/resources/Static/html/admin-show-customers.html
+++ b/src/main/resources/Static/html/admin-show-customers.html
@@ -6,7 +6,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
           integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <script src="../js/coffeeShopAdmin.js"></script>
+    <script src="../js/admin_showCustomers.js"></script>
 </head>
 <body>
 <div class="container">
