--- a/src/main/resources/Static/html/admin-show-customers.html
+++ b/src/main/resources/Static/html/admin-show-customers.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Admin Customer Page</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
           integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <script src="../js/admin_showCustomers.js"></script>
@@ -11,39 +11,23 @@
 <body>
 <div class="container">
     <h1>Customers Page</h1>
-<table id="customer-list" class="table">
+<table class="table">
     <thead class="thead-dark">
     <tr>
-        <th scope="col">First Name</th>
-        <th scope="col">Last Name</th>
+        <th scope="col">Name</th>
         <th scope="col">E-Mail</th>
+        <th scope="col">Type</th>
+        <th scope="col">Show Orders</th>
     </tr>
     </thead>
-    <tbody>
-    <tr>
-        <td>Mark</td>
-        <td>Otto</td>
-        <td>mark@mdo</td>
-        <td> </td>
-    </tr>
-    <tr>
-        <td>Jacob</td>
-        <td>Thornton</td>
-        <td>jacob@fat</td>
-    </tr>
-    <tr>
-        <td>Larry</td>
-        <td>the Bird</td>
-        <td>larry@twitter</td>
-    </tr>
+    <tbody id="customer-list">
+
     </tbody>
 </table>
     </div> <!--Container-->
 
 
-<script src="https://code.jquery.com/jquery-3.5.1.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
+
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
         crossorigin="anonymous"></script>
