sooo close, yet so far away

--- a/src/main/resources/Static/checkOutCartPage.html
+++ b/src/main/resources/Static/checkOutCartPage.html
@@ -29,7 +29,7 @@
                     <td>  </td>
                     <td>  </td>
                     <td><h3>Total</h3></td>
-                    <td class="text-right"><h3><strong>$31.53</strong></h3></td>
+                    <td class="text-right"><h3><strong id="totalPrice"></strong></h3></td>
                 </tr>
                 <tr>
                     <td>  </td>
