--- a/src/main/resources/Static/html/admin-show-orders-from-customer.html
+++ b/src/main/resources/Static/html/admin-show-orders-from-customer.html
@@ -9,15 +9,14 @@
     <script src="../js/coffeeShopAdminOrders.js"></script>
 </head>
 <body>
-
-<h1>Customer Orders</h1>
+<br>
 <div class="container" id="show-order">
     <table class="table">
         <thead class="thead-dark">
         <tr>
-            <th scope="col">Order Numbers</th>
-            <th scope="col">Date</th>
-            <th scope="col">Amount</th>
+            <th scope="col"><h3>Customer Orders</h3></th>
+            <th scope="col"></th>
+            <th scope="col"></th>
         </tr>
         </thead>
     </table>
