checkoutCartPage och receiptPage almost done 99%

--- a/src/main/resources/Static/html/checkOutCartPage.html
+++ b/src/main/resources/Static/html/checkOutCartPage.html
@@ -36,14 +36,10 @@
                     <td>  </td>
                     <td>  </td>
                     <td>
-                        <button type="button" class="btn btn-default">
-                            <span class="glyphicon glyphicon-shopping-cart"></span> Continue Shopping
-                        </button>
+                        <a href="product-details.html" class="btn btn-success">Continue Shopping <span class="glyphicon glyphicon-play"></span></a>
                     </td>
                     <td>
-                        <button type="button" class="btn btn-success">
-                            Checkout <span class="glyphicon glyphicon-play"></span>
-                        </button>
+                        <a href="receiptPage.html" class="btn btn-success" onclick="confirmOrder()">Checkout <span class="glyphicon glyphicon-play"></span></a>
                     </td>
                 </tr>
                 </tbody>
@@ -51,6 +47,6 @@
         </div>
     </div>
 </div>
-<script src="cart.js"></script>
+<script src="../js/cart.js"></script>
 </body>
 </html>
