workinprogress... We are little bit doomed V1.3 checkOutCartPage.html och med görande JS är 100% klart receiptPage.html och medgörande JS är 100% klart.
productPage.html behöver mycket kärlek, det som saknas är:

Sökfält: både funktionellt designmesseigt(html) 0%
addToCart knapp: vi har kommit en bit totalt, den kan lägga in purchaseEntry, men att försöka med två så krashar den, det saknas mycket logik i allmänhet i den JS funktionen men även på backend delen

utöver det så är det bara logoutknapparna som behövs fixas!

--- a/src/main/resources/Static/html/checkOutCartPage.html
+++ b/src/main/resources/Static/html/checkOutCartPage.html
@@ -36,7 +36,7 @@
                     <td>  </td>
                     <td>  </td>
                     <td>
-                        <a href="product-details.html" class="btn btn-success">Continue Shopping <span class="glyphicon glyphicon-play"></span></a>
+                        <a href="productPage.html" class="btn btn-success">Continue Shopping <span class="glyphicon glyphicon-play"></span></a>
                     </td>
                     <td>
                         <a href="receiptPage.html" class="btn btn-success" onclick="confirmOrder()">Checkout <span class="glyphicon glyphicon-play"></span></a>
