Can add products and checkout for completing the purchase. Login in with Admin and check the purchase works. Problems > Products gets added onebyone, not using quantity. Logic for creating a new purchase needs to look over

--- a/src/main/resources/Static/html/receiptPage.html
+++ b/src/main/resources/Static/html/receiptPage.html
@@ -28,7 +28,7 @@
                     <td>  </td>
                     <td>  </td>
                     <td><h3>Total</h3></td>
-                    <td class="text-right"><h3><strong id="finalPrice"></strong></h3></td>
+                    <td class="text-right" id="finalPrice"><h3><strong id="finalPrice"></strong></h3></td>
                 </tr>
                 <tr>
                     <td>  </td>
