--- a/src/main/resources/Static/html/productPage.html
+++ b/src/main/resources/Static/html/productPage.html
@@ -15,6 +15,13 @@
         <div class="col-sm-12 col-md-10 col-md-offset-1">
             <table class="table table-hover">
                 <thead>
+
+                    <input type="text" id="searchField">
+                    <button id="searchButton" class="btn btn-black" onclick="">Search</button>
+                    <button id="clearSearchButton" class="btn btn-black" onclick="">Clear search</button>
+
+                    //brorsan snackar som fan... kan ta ett litet tag
+
                 <tr>
                     <th>Product</th>
                     <th> </th>
@@ -27,10 +34,10 @@
                 </tr>
 
                     <td>
-                        <a href="product-details.html" class="btn btn-danger">Log Out <span class="glyphicon glyphicon-play"></span></a>
+                        <a href="product-details.html" class="btn btn-black">Log Out <span class="glyphicon glyphicon-play"></span></a>
                     </td>
                     <td>
-                        <a href="checkOutCartPage.html" class="btn btn-success">Checkout <span class="glyphicon glyphicon-play"></span></a>
+                        <a href="checkOutCartPage.html" class="btn btn-black">Checkout <span class="glyphicon glyphicon-play"></span></a>
                     </td>
                 </tr>
                 </tbody>
