fem steg fram, 38 back! .... WHYYYYYY!

--- a/src/main/resources/Static/html/productPage.html
+++ b/src/main/resources/Static/html/productPage.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
           integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script src="../js/cart.js"></script>
+    <script src="../js/productPage.js"></script>
 </head>
 <body>
 <div class="container">
@@ -17,10 +17,9 @@
                 <thead>
 
                     <input type="text" id="searchField">
-                    <button id="searchButton" class="btn btn-black" onclick="">Search</button>
-                    <button id="clearSearchButton" class="btn btn-black" onclick="">Clear search</button>
+                    <button id="searchButton" class="btn btn-outline-secondary">Search</button>
 
-                    //brorsan snackar som fan... kan ta ett litet tag
+
 
                 <tr>
                     <th>Product</th>
@@ -34,10 +33,10 @@
                 </tr>
 
                     <td>
-                        <a href="product-details.html" class="btn btn-black">Log Out <span class="glyphicon glyphicon-play"></span></a>
+                        <a href="product-details.html" class="btn btn-outline-secondary">Log Out <span class="glyphicon glyphicon-play"></span></a>
                     </td>
                     <td>
-                        <a href="checkOutCartPage.html" class="btn btn-black">Checkout <span class="glyphicon glyphicon-play"></span></a>
+                        <a href="checkOutCartPage.html" class="btn btn-outline-secondary">Checkout <span class="glyphicon glyphicon-play"></span></a>
                     </td>
                 </tr>
                 </tbody>
