--- a/src/main/resources/Static/html/receiptPage.html
+++ b/src/main/resources/Static/html/receiptPage.html
@@ -28,19 +28,21 @@
                     <td>  </td>
                     <td>  </td>
                     <td><h3>Total</h3></td>
-                    <td class="text-right" id="finalPrice"><h3><strong id="finalPrice"></strong></h3></td>
+                    <td class="text-right"><h3><strong id="finalPrice"></strong></h3></td>
                 </tr>
                 <tr>
                     <td>  </td>
                     <td>  </td>
                     <td>  </td>
                     <td>
-                        <a href="product-details.html" class="btn btn-success">Make another purchase <span class="glyphicon glyphicon-play"></span></a>
+                        <a href="productPage.html" class="btn btn-success" id="anotherPurchase">
+                            Make another purchase <span class="glyphicon glyphicon-play"></span>
+                        </a>
                     </td>
                     <td>
-                        <button type="button" class="btn btn-danger">
+                        <a href="index.html" class="btn btn-success" id="logout">
                             Log out <span class="glyphicon glyphicon-log-out"></span>
-                        </button>
+                        </a>
                     </td>
                 </tr>
                 </tbody>
