--- a/src/main/resources/Static/html/admin-show-customers.html
+++ b/src/main/resources/Static/html/admin-show-customers.html
@@ -23,6 +23,13 @@
     <tbody id="customer-list">
 
     </tbody>
+    <tfoot>
+    <td>
+        <a href="index.html" class="btn btn-success" id="logout">
+            Log out <span class="glyphicon glyphicon-log-out"></span>
+        </a>
+    </td>
+    </tfoot>
 </table>
     </div> <!--Container-->
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
