--- a/src/main/resources/Static/html/admin-show-orders-from-customer.html
+++ b/src/main/resources/Static/html/admin-show-orders-from-customer.html
@@ -34,8 +34,23 @@
         </div>
     </div>
 
+    <table>
+    <tfoot>
 
+    <td>
+        <a href="index.html" class="btn btn-success" id="logout">
+            Log out <span class="glyphicon glyphicon-log-out"></span>
+        </a>
+    </td>
+    <td>
+        <a href="admin-show-customers.html" class="btn btn-success" id="goBack">
+            Go back <span class="glyphicon glyphicon-log-out"></span>
+        </a>
+    </td>
+    </tfoot>
+    </table>
 </div>
+
 
 
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
