soooooooon done i hope :P

--- a/src/main/resources/Static/html/productPage.html
+++ b/src/main/resources/Static/html/productPage.html
@@ -34,10 +34,14 @@
                 <tr id="afterProductsProductPage">
 
                 </tr>
-
-                    <td>
-                        <a href="product-details.html" class="btn btn-outline-secondary">Log Out <span class="glyphicon glyphicon-play"></span></a>
-                    </td>
+                <tr id="ProductsProductPage">
+                </tr>
+                <tr>
+                <td>
+                    <a href="index.html" class="btn btn-success" id="logout">
+                        Log out <span class="glyphicon glyphicon-log-out"></span>
+                    </a>
+                </td>
                     <td>
                         <a href="checkOutCartPage.html" class="btn btn-outline-secondary">Checkout <span class="glyphicon glyphicon-play"></span></a>
                     </td>
