--- a/src/main/resources/static/html/registrate-customer.html
+++ b/src/main/resources/static/html/registrate-customer.html
@@ -3,85 +3,87 @@
 <head>
     <meta charset="UTF-8">
     <title>Admin Customer Page</title>
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-          integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+    <link href="../css/login.css" rel="stylesheet"/>
     <script src="../js/registrateCustomer.js"></script>
 </head>
 <body>
 <div class="container">
-    <form id="customer-form" class="needs-validation" novalidate>
-        <div class="form-row col-md-6">
-            <label for="inputname">First Name</label>
-            <input type="text" class="form-control" id="inputname" placeholder="..." required> <!--#inputname för att hämta värdet-->
-            <div class="valid-feedback">
-                Looks good!
-            </div>
-            <div class="invalid-feedback">
-                Please enter your first name.
-            </div>
+    <div class="sidenav">
+        <div class="login-main-text">
+            <h2>Application</h2><h3>Registrate Page</h3>
+            <p>Register here to get access.</p>
         </div>
-        <div class="form-row col-md-6">
-            <label for="inputname">Last Name</label>
-            <input type="text" class="form-control" id="inputlastname" placeholder="..." required> <!--#inputlastname för att hämta värdet-->
-            <div class="valid-feedback">
-                Looks good!
-            </div>
-            <div class="invalid-feedback">
-                Please enter your last name.
-            </div>
-        </div>
-        <div class="form-row col-md-6">
-            <label for="inputEmail">Email</label>
-            <input type="email" class="form-control" id="inputEmail" placeholder="..."  required> <!--#inputEmail för att hämta värdet-->
-            <div class="valid-feedback">
-                Looks good!
-            </div>
-            <div class="invalid-feedback">
-                Please choose an Email.
-            </div>
-        </div>
-        <div class="form-row col-md-6">
-            <label for="inputPassword">Password</label>
-            <input type="password" class="form-control" id="inputPassword" placeholder="..." required> <!--#inputPassword för att hämta värdet-->
-            <div class="valid-feedback">
-                Looks good!
-            </div>
-            <div class="invalid-feedback">
-                Please choose a Password.
-            </div>
-        </div>
-        <div class="form-row col-md-6">
-            <div class="form-check">
-                <input class="form-check-input" type="checkbox" id="inputCheckbox">
-                <label class="form-check-label" for="inputCheckbox">
-                    Show password
-                </label>
-            </div>
-        </div>
-        <br>
-        <div class="form-row col-md-6">
-            <div class="form-group col-md-1"><button type="reset" class="btn btn-danger" id="reset-button">Reset</button></div>
-            <div class="form-group col-md"></div>
-            <div class="form-group col-md-2"><button type="submit" class="btn btn-success" id="submit-button">Registrate</button></div> <!--#registrate för att hämta värdet-->
-            <div class="form-group col-md"></div>
-            <div class="form-group col-md-4"><button type="button" class="btn btn-primary" id="go-back-button">Go back</button></div>
-        </div>
-    </form>
         <div id="result-message">
-
+        </div>
+    </div>
+    <div class="main">
+        <div class="col-md-6 col-sm-12">
+            <form id="customer-form" class="login-form needs-validation" novalidate>
+                <div class="form-row">
+                    <label for="inputname">First Name</label>
+                    <input type="text" class="form-control" id="inputname" placeholder="..." required> <!--#inputname för att hämta värdet-->
+                    <div class="valid-feedback">
+                        Looks good!
+                    </div>
+                    <div class="invalid-feedback">
+                        Please enter your first name.
+                    </div>
+                </div>
+                <div class="form-row">
+                    <label for="inputname">Last Name</label>
+                    <input type="text" class="form-control" id="inputlastname" placeholder="..." required> <!--#inputlastname för att hämta värdet-->
+                    <div class="valid-feedback">
+                        Looks good!
+                    </div>
+                    <div class="invalid-feedback">
+                        Please enter your last name.
+                    </div>
+                </div>
+                <div class="form-row">
+                    <label for="inputEmail">Email</label>
+                    <input type="email" class="form-control" id="inputEmail" placeholder="..."  required> <!--#inputEmail för att hämta värdet-->
+                    <div class="valid-feedback">
+                        Looks good!
+                    </div>
+                    <div class="invalid-feedback">
+                        Please choose an Email.
+                    </div>
+                </div>
+                <div class="form-row">
+                    <label for="inputPassword">Password</label>
+                    <input type="password" class="form-control" id="inputPassword" placeholder="..." required> <!--#inputPassword för att hämta värdet-->
+                    <div class="valid-feedback">
+                        Looks good!
+                    </div>
+                    <div class="invalid-feedback">
+                        Please choose a Password.
+                    </div>
+                <div class="form-row">
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" id="inputCheckbox">
+                        <label class="form-check-label" for="inputCheckbox" id="check-label">
+                            Show password
+                        </label>
+                    </div>
+                </div>
+                </div>
+                <br>
+                <div class="col-md">
+                    <button type="reset" class="btn btn-danger" id="reset-button">Reset</button>
+                    <button type="submit" class="btn btn-success" id="submit-button">Registrate</button>
+                </div>
+            </form>
+            <br>
+                <a href="index.html">
+                    <button type="button" class="btn btn-outline-secondary" id="go -back-button">Go back and Log in</button>
+                </a>
         </div>
     </div>
 </div>
-
-
-
-
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-        crossorigin="anonymous"></script>
 </body>
 </html>
